# fastapi-nextjs-docker-github-actions-reference

./: .actrc  .commitlintrc.json  .env.example  .gitignore  .mcp.json  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-manage.sh  test-database.sh  test-deployment.sh
.github/workflows/: .actrc.docker  branch-protection.yml  ci.yml  code-quality.yml  docker-build.yml  docker-dev.yml  docker-local.yml  semantic-version.yml  version-check.yml
.memory-bank/: active-context.md  decision-log.md  detailed-task-specifications.md  product-context.md  progress.md  revised-implementation-sequence.md  system-patterns.md
.memory-bank/memory-bank/: active-context.md  decision-log.md  implementation-sequence.md  product-context.md  progress.md  system-patterns.md
docker/postgres/init/: 01-init-db.sql  02-health-check.sql
docs/: BRANCH_PROTECTION.md  TESTING_SEMANTIC_VERSION.md  containerized-deployment-tests.md  semantic-version-test.md  task-specifications.md
scripts/: commit-helper.sh  create-github-issues.sh  create-remaining-issues.sh  docker-build-test.sh  setup-branch-protection.sh
src/fastapi/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-build.sh  pyproject.toml  requirements.txt
src/fastapi/app/: main.py
src/fastapi/app/api/: config.py  health.py  version.py
src/fastapi/app/api/v1/: __init__.py
src/fastapi/app/core/: config.py
src/fastapi/app/db/: session.py
src/fastapi/app/models/: base.py
src/fastapi/app/schemas/: base.py  health.py
src/fastapi/app/services/: base.py
src/fastapi/tests/: test_app_structure.py  test_configuration.py  test_dependencies.py  test_health_endpoints.py  test_setup.py
src/nextjs/: Dockerfile  Dockerfile.dev  README.md  docker-build.sh  jest.config.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
src/nextjs/app/: globals.css  layout.tsx  page.tsx
src/nextjs/app/actions/: api.ts
src/nextjs/app/api-test/: page.tsx
src/nextjs/app/dashboard/: page.tsx
src/nextjs/components/common/: api-status.tsx  error-boundary.tsx  loading.tsx
src/nextjs/components/layout/: footer.tsx  header.tsx
src/nextjs/components/ui/: button.tsx  card.tsx  input.tsx
src/nextjs/config/: constants.ts  env.ts
src/nextjs/contexts/: theme-context.tsx  toast-context.tsx
src/nextjs/hooks/: index.ts  useApi.ts  useConfig.ts  useHealth.ts  useLocalStorage.ts
src/nextjs/lib/: utils.test.ts  utils.ts
src/nextjs/services/: api.ts  config.ts  health.ts
src/nextjs/types/: api.ts  index.ts
